fix huge gap at the end of code boxes

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -48,4 +48,10 @@ body {
   strong {
     color: var(--highlight-color);
   }
+
+  pre {
+    @apply m-2;
+    @apply p-1;
+    @apply rounded-[4px];
+  }
 }
